# discord-cdn-pls

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: main.rs
